bug: improved product-item card css layout for IE11, and aligned the white border between product name and footer to be properly aligned in all items not depending on the product name lines length

--- a/online-shop-frontend/src/app/components/products/product-item/product-item.component.scss
+++ b/online-shop-frontend/src/app/components/products/product-item/product-item.component.scss
@@ -41,8 +41,6 @@
     height: 100%;
     flex: 1;
 
-    //min-height: 140px;
-
     .product-title {
       text-align: left;
       font-size: 14px;
@@ -79,11 +77,20 @@
 
   .product-footer {
     padding: 25px 0 5px;
-    border-top: 1px solid #ddd;
     display: flex;
     flex: 1;
     align-items: flex-end;
     justify-content: space-between;
+    position: relative;
+
+    &::before {
+      content: "";
+      border-top: 1px solid #ddd;
+      width: 100%;
+      position: absolute;
+      left: 0;
+      bottom: 60px;
+    }
 
     .price {
       font-size: 14px;
@@ -127,5 +134,11 @@
   }
   .shoptastic-product-card .product-text-wrapper {
     height: 160px;
+  }
+
+  @media screen and (max-width: 768px) {
+    .shoptastic-product-card .product-text-wrapper {
+      height: 140px;
+    }
   }
 }
